--- a/configure.in
+++ b/configure.in
@@ -3,11 +3,11 @@
 # Now you only need to update the version number in two places - below,
 # and in the README
 
-AC_INIT([libtrace],[3.0.7],[contact@wand.net.nz],[libtrace])
+AC_INIT([libtrace],[3.0.8],[contact@wand.net.nz],[libtrace])
 
 LIBTRACE_MAJOR=3
 LIBTRACE_MID=0
-LIBTRACE_MINOR=7
+LIBTRACE_MINOR=8
 
 # OpenSolaris hides libraries like libncurses in /usr/gnu/lib, which is not
 # searched by default - add it to LDFLAGS so we at least have a chance of 
@@ -137,7 +137,7 @@ AC_PROG_LIBTOOL
 AC_PROG_GCC_TRADITIONAL
 
 # Fail if any of these functions are missing
-AC_CHECK_FUNCS(socket strdup strlcpy strcasecmp strncasecmp snprintf)
+AC_CHECK_FUNCS(socket strdup strlcpy strcasecmp strncasecmp snprintf vsnprintf)
 
 AC_CHECK_SIZEOF([long int])
 
