* Make sure the tracereplay manpage gets distributed

--- a/tools/tracereplay/Makefile.am
+++ b/tools/tracereplay/Makefile.am
@@ -1,5 +1,8 @@
 bin_PROGRAMS = tracereplay
 
+man_MANS=tracereplay.1
+EXTRA_DIST=$(man_MANS)
+
 include ../Makefile.tools
 tracereplay_SOURCES = tracereplay.c
 tracereplay_LDADD = -ltrace
