* Fixed poor performance of the event API by greatly reducing the amount of packets created, copied and freed  * We now cache the transport header and payload length for each packet  * We now deal with Linux SLL Ethernet captures taken using tcpdump with -i any correctly.  * Changed parameters for internal function trace_get_payload_from_sll - it now sets both the arphrd type and the next protocol  * Moved ARPHRD definitions into a separate header file, as they come in handy anywhere we deal with SLL headers

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -1,5 +1,5 @@
 lib_LTLIBRARIES = libtrace.la
-include_HEADERS = libtrace.h dagformat.h lt_inttypes.h daglegacy.h rt_protocol.h erftypes.h wandio.h
+include_HEADERS = libtrace.h dagformat.h lt_inttypes.h daglegacy.h rt_protocol.h erftypes.h wandio.h 
 
 AM_CFLAGS=@LIBCFLAGS@
 AM_CXXFLAGS=@LIBCXXFLAGS@
@@ -67,7 +67,7 @@ libtrace_la_SOURCES = trace.c common.h \
 		$(LIBTRACEIO_ZLIB) $(LIBTRACEIO_BZLIB) $(LIBTRACEIO_LZO) \
 		ior-peek.c ior-stdio.c ior-thread.c \
 		iow-stdio.c iow-thread.c wandio.c \
-		wandio.h
+		wandio.h arphrd.h
 
 if DAG2_4
 nodist_libtrace_la_SOURCES = dagopts.c dagapi.c
