--- a/configure.in
+++ b/configure.in
@@ -36,6 +36,7 @@ AC_CONFIG_FILES([Makefile lib/Makefile docs/Makefile libpacketdump/Makefile
 	tools/tracertstats/Makefile tools/tracesplit/Makefile
 	tools/tracestats/Makefile tools/tracetop/Makefile
 	tools/tracereplay/Makefile tools/tracediff/Makefile
+	tools/traceends/Makefile
 	examples/Makefile examples/skeleton/Makefile examples/rate/Makefile
 	examples/stats/Makefile examples/tutorial/Makefile
 	docs/libtrace.doxygen 
