* We now use pcap_create and pcap_activate for pcap interfaces if libpcap 1.0 or later is available. This doesn't seem to make much of a difference performance-wise, as pcap_open_live was updated to use these functions anyway. This means if mmapped packet capture is available, we would have used it via pcap_open_live anyway.  * Added a new function (trace_interrupt). Calling this function will set an internal variable which can be used to cause any blocking read_packet function to exit with an EOF. Useful for programs that are handling signals themselves and need a way to tell libtrace to stop. Prior to this, programs like tracestats would not exit on Ctrl-C if reading from a pcap interface which was not receiving any packets.  * Updated pcap interface format to respond to trace_interrupt.  * Optimising trace_apply_filter to minimise calls to trace_get_link_type and trace_get_packet_buffer.  * Removed unused extern variable "form" from libtrace_int.h  * Fixed bug with filters in the pcap interface format which would result in "invalid BPF program" error message when filter was definitely legit.  * Updated version number to 3.0.13

--- a/configure.in
+++ b/configure.in
@@ -3,11 +3,11 @@
 # Now you only need to update the version number in two places - below,
 # and in the README
 
-AC_INIT([libtrace],[3.0.12],[contact@wand.net.nz],[libtrace])
+AC_INIT([libtrace],[3.0.13],[contact@wand.net.nz],[libtrace])
 
 LIBTRACE_MAJOR=3
 LIBTRACE_MID=0
-LIBTRACE_MINOR=12
+LIBTRACE_MINOR=13
 
 # OpenSolaris hides libraries like libncurses in /usr/gnu/lib, which is not
 # searched by default - add it to LDFLAGS so we at least have a chance of 
@@ -220,6 +220,7 @@ AC_CHECK_HEADER(gdc.h,AC_DEFINE(HAVE_LIBGDC,1,[has gdc.h]))
 
 # Check for libpcap
 AC_CHECK_LIB(pcap,pcap_next_ex,pcapfound=1,pcapfound=0)
+AC_CHECK_LIB(pcap,pcap_create,pcapcreate=1,pcapcreate=0)
 AC_CHECK_FUNCS(pcap_inject pcap_sendpacket pcap_setnonblock)
 AC_CHECK_DECLS([BIOCSETIF],,,[
 #include <sys/types.h>
@@ -247,6 +248,10 @@ else
 	LIBTRACE_LIBS="$LIBTRACE_LIBS -lpcap"
 	AC_DEFINE([HAVE_LIBPCAP],1,[compile with libpcap support])
 	AC_DEFINE([HAVE_BPF_FILTER],1,[compile with bpf filter support])
+fi
+
+if test "$pcapcreate" = 1; then
+	AC_DEFINE([HAVE_PCAP_CREATE],1,[compile with libpcap 1.0 support])
 fi
 
 # Configure options for use of DAG cards
@@ -541,7 +546,12 @@ reportopt() {
 # Report which configure options were set
 echo
 AC_MSG_NOTICE([Libtrace version $PACKAGE_VERSION])
-reportopt "Compiled with PCAP 0.8 support" $ac_cv_lib_pcap_pcap_next_ex
+if test "$pcapcreate" = 1; then
+	AC_MSG_NOTICE([Compiled with PCAP support: >= 1.0])
+else
+	AC_MSG_NOTICE([Compiled with PCAP support: < 1.0])
+fi
+
 reportopt "Compiled with compressed trace (zlib) support" $ac_cv_lib_z_deflate
 reportopt "Compiled with compressed trace (bz2) support" $ac_cv_lib_bz2_BZ2_bzDecompressInit
 reportopt "Compiled with compressed trace (lzo write only) support" $ac_cv_lib_lzo2_lzo1x_1_compress
